<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailEventActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivMediaCover"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:contentDescription="@string/event_media_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tvEventCategoryAndLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:text="@string/event_category_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMediaCover" />

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/event_title"
            app:layout_constraintEnd_toEndOf="@id/tvEventCategoryAndLocation"
            app:layout_constraintStart_toStartOf="@id/tvEventCategoryAndLocation"
            app:layout_constraintTop_toBottomOf="@id/tvEventCategoryAndLocation" />

        <TextView
            android:id="@+id/tvEventOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/event_owner"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tvEventName"
            app:layout_constraintStart_toStartOf="@+id/tvEventName"
            app:layout_constraintTop_toBottomOf="@id/tvEventName" />

        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/event_summary"
            app:layout_constraintEnd_toEndOf="@+id/tvEventOwner"
            app:layout_constraintStart_toStartOf="@+id/tvEventOwner"
            app:layout_constraintTop_toBottomOf="@id/tvEventOwner" />


        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/event_description"
            app:layout_constraintEnd_toEndOf="@+id/tvSummary"
            app:layout_constraintStart_toStartOf="@+id/tvSummary"
            app:layout_constraintTop_toBottomOf="@id/tvSummary" />

        <TextView
            android:id="@+id/tvEventQuota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/event_quota"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvDescription"
            app:layout_constraintStart_toStartOf="@+id/tvDescription"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <TableLayout
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tvEventQuota"
            app:layout_constraintStart_toStartOf="@+id/tvEventQuota"
            app:layout_constraintTop_toBottomOf="@id/tvEventQuota">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/event_date"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_span="2"
                    android:padding="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/event_start"
                    android:fontFamily="@font/montserrat_regular"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/tvEventStart"
                    android:text="@string/event_duration"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_weight="2"
                    android:padding="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/event_end"
                    android:fontFamily="@font/montserrat_regular"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/tvEventEnd"
                    android:text="@string/event_duration"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_weight="2"
                    android:padding="8dp"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/event_date"
            app:layout_constraintStart_toStartOf="@+id/event_date"
            app:layout_constraintTop_toBottomOf="@+id/event_date"

            android:text="@string/register_button" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvEventNotFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/event_not_found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>